tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:24: error: unknown universe level v
doSeqRightIssue.lean:5:24: error: unknown universe level v
doSeqRightIssue.lean:7:8: error: don't know how to synthesize placeholder
context:
p₁ p₂ : (sorryAx (Sort u_1))
h₁ : (sorryAx ?m.319)=(sorryAx ?m.319)
h : (sorryAx (?m.320 _))≅_
_a_1 _a_2 : (sorryAx (Sort u_1))
_a_3 : (sorryAx ?m.319)=(sorryAx ?m.319)
⊢ Prop
doSeqRightIssue.lean:7:8: error: don't know how to synthesize placeholder
context:
p₁ p₂ : (sorryAx (Sort u_1))
h₁ : (sorryAx ?m.319)=(sorryAx ?m.319)
h : (sorryAx (?m.320 _))≅_
_a_1 _a_2 : (sorryAx (Sort u_1))
⊢ Prop
doSeqRightIssue.lean:7:66: error: don't know how to synthesize placeholder
  @HEq ?m.320 … … …
context:
α : Type u
β : α → (sorryAx (Sort ?))
p₁ p₂ : (sorryAx (Sort u_1))
h₁ : (sorryAx ?m.319)=(sorryAx ?m.319)
⊢ Prop
doSeqRightIssue.lean:7:66: error: don't know how to synthesize placeholder
  @HEq ?m.320 … … …
context:
α : Type u
β : α → (sorryAx (Sort ?))
p₁ p₂ : (sorryAx (Sort u_1))
h₁ : (sorryAx ?m.319)=(sorryAx ?m.319)
⊢ Prop
doSeqRightIssue.lean:7:48: error: don't know how to synthesize placeholder
  @Eq ?m.319 … …
context:
α : Type u
β : α → (sorryAx (Sort ?))
p₁ p₂ : (sorryAx (Sort u_1))
⊢ Sort u_2
